k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrui
  labels:
    app: mrui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mrui
  template:
    metadata:
      labels:
        app: mrui
    spec:
      containers:
      - name: mrui
        image: kklopfenstein/mrui:v0.1
        ports:
        - containerPort: 3000
