k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mrui-service
spec:
  selector:
    app: mrui-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
  type: LoadBalancer
