k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrui-ingress
  annotations:
    nginx.ingress.kubernetes.io/mrui-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mrui-service
            port:
              number: 3001
